# marley-v2

./: .dockerignore  .env.production.example  .gitignore  CLAUDE_CONTEXT.md  DESIGN_BRIEF.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  run_full_pipeline.py  run_pipeline.py  run_v4_pipeline.py
.claude/: settings.local.json
.github/: dependabot.yml
aso_delivery/: __init__.py  run_all.py
aso_math/: ARCHITECTURE_PLAN.md  __init__.py  config.py  envelope.py  organisms.py  run_all.py  target_config.py  thermo.py
core/: codon_tables.py  db.py  db_runs.py  errors.py  launcher.py  logger.py  models.py  pipeline_config.py  registry.py  run.py  run_cli.py  storage.py  structure.py  uniprot.py  worker.py  worker_api.py
data/: validated_sequences.fasta
docs/: MEDIUM_ARTICLE.md  api_integration_specs.md  infrastructure_plan.md  marley_complete_report.md  marley_full_report.md  module06_plan.md  supabase_schema.sql  supabase_schema_v2.sql  variant_comparison.md
drug_targets/: 01_fetch_enzymes.py  02_human_comparison.py  03_essentiality.py  04_druggability.py  05_report.py  06_fetch_structures.py  07_compound_library.py  08_docking.py  09_admet_filter.py  10_docking_report.py  run_drug_targets.py
infra/: Caddyfile  Dockerfile.web  Dockerfile.worker  docker-compose.monitoring.yml  prometheus.yml  requirements.worker.txt  setup-vps.sh
marley_ai/: .gitignore  __init__.py  config.py  envelope.py  registry.py  run_all.py
mrl_quantum/: __init__.py  config.py  run.py
pipeline/: 01_fetch_genome.py  02_filter_surface.py  (+18 more)
(+766 files in other folders)
