[project]
name = "marley"
version = "1.0.0"
description = "Computational pipeline for antisense oligonucleotide validation against parasitic diseases"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Pedro Nascimento", email = "pedrohnsc2@gmail.com"},
]
keywords = ["antisense", "oligonucleotide", "ASO", "leishmaniasis", "neglected-tropical-diseases", "spliced-leader-RNA"]

dependencies = [
    "biopython>=1.83",
    "requests>=2.31",
    "pandas>=2.2",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "celery>=5.3",
    "redis>=5.0",
    "weasyprint>=62",
    "jinja2>=3.1",
    "matplotlib>=3.8",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
web = [
    "supabase>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line length handled by formatter

[tool.coverage.run]
source = ["aso_math"]
omit = ["*/tests/*", "*/results/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70
